--- a/Iskander-et-al-Figure1.html
+++ b/Iskander-et-al-Figure1.html
@@ -437,7 +437,7 @@ color = c(&quot;#009E73&quot;,&quot;darkslategray&quot;,&quot;#0080FF&quot;,&quo
 
 
 circos.par(&quot;start.degree&quot; = 90, cell.padding = c(0, 0, 0, 0))
-circos.initialize(&quot;a&quot;, xlim = c(0, 100)) # 'a` just means there is one sector
+circos.initialize(&quot;a&quot;, xlim = c(0, 100)) 
 circos.track(ylim = c(0.5, length(percent)+0.5), track.height = 0.8, 
              bg.border = NA, panel.fun = function(x, y) {
                xlim = CELL_META$xlim
@@ -477,7 +477,7 @@ color = c(&quot;#009E73&quot;,&quot;darkslategray&quot;,&quot;#0080FF&quot;,&quo
 circos.par(&quot;start.degree&quot; = 90, cell.padding = c(0, 0, 0, 0))</code></pre>
 <pre><code>## Warning: 'start.degree' can only be modified before `circos.initialize`, or
 ## maybe you forgot to call `circos.clear` in your last plot.</code></pre>
-<pre class="r"><code>circos.initialize(&quot;a&quot;, xlim = c(0, 100)) # 'a` just means there is one sector
+<pre class="r"><code>circos.initialize(&quot;a&quot;, xlim = c(0, 100)) 
 circos.track(ylim = c(0.5, length(percent)+0.5), track.height = 0.8, 
              bg.border = NA, panel.fun = function(x, y) {
                xlim = CELL_META$xlim
@@ -517,7 +517,7 @@ color = c(&quot;#009E73&quot;,&quot;darkslategray&quot;,&quot;#0080FF&quot;,&quo
 circos.par(&quot;start.degree&quot; = 90, cell.padding = c(0, 0, 0, 0))</code></pre>
 <pre><code>## Warning: 'start.degree' can only be modified before `circos.initialize`, or
 ## maybe you forgot to call `circos.clear` in your last plot.</code></pre>
-<pre class="r"><code>circos.initialize(&quot;a&quot;, xlim = c(0, 100)) # 'a` just means there is one sector
+<pre class="r"><code>circos.initialize(&quot;a&quot;, xlim = c(0, 100)) 
 circos.track(ylim = c(0.5, length(percent)+0.5), track.height = 0.8, 
              bg.border = NA, panel.fun = function(x, y) {
                xlim = CELL_META$xlim
